@@ -13,6 +13,7 @@
  9. Show add/play buttons on hover of browse items on desktop browsers.
 10. Add colour to current queue track.
 11. Get list of rescan options from LMS.
+12. Remove confirmation dialog when asking to rescan.
 
 1.4.5
 -----
